﻿v 1.5.2

IPCAMEMU-6: Demo scripts: fixed.
IPCAMEMU-18: Pass Configuration via Command Line: it is possitble to set alternate configuration via command line argument as shown below
"<Configurator|IpCamEmu GUI.exe|IpCamEmu Console.exe>" "-Configuration=full path"
"<Configurator|IpCamEmu GUI.exe|IpCamEmu Console.exe>" "-Configuration=relative path"
Relative paths are resolved relative to current directory.
IPCAMEMU-22: Relative paths in source must be resolved relative to configuration file location.

v 1.5.1

Core: Ip Camera ensures one instance is running on each port.
IpCamEmu.exe renamed to 'IpCamEmu Console.exe', IpCamEmuWPF.exe renamed to 'IpCamEmu GUI.exe', logs place changed to %temp%\HDE\IpCamEmu for both applications.
IPCAMEMU-15: System.Net.HttpListenerException (0x80004005): Failed to listen on prefix 'http://localhost:2000/' because it conflicts with an existing registration on the machine.

v 1.5

Added Configurator: it reads application configuration and registers IP-camera in firewall (launches under elevated privileges).
Documentation: service declaration documentation fix.
Added Rgion of Interest: you can specify custom borders of frame you'd like to receive (this feature requires non-indexed images).
Configurator: several bugs were fixed. Now it works as it should.

v 1.4

WMV source was deleted, because it has issues with some WMV files.
However WMV files are still supported with videoFile source.

v 1.3

Improvements
1. Wpf gui wrapper for demos & Setup (Configuration and firewall setup are still need to be handled manually).