@@ -1,0 +1,4 @@
+﻿using System.Reflection;
+
+[assembly: AssemblyVersion("1.5.2.0")]
+[assembly: AssemblyFileVersion("1.5.2.0")]
